# stdsc

./: CMakeLists.txt  README.md  demo.sh
doc/: Doxyfile
examples/: CMakeLists.txt
examples/add_server/: CMakeLists.txt
examples/add_server/client/: CMakeLists.txt  main.cpp
examples/add_server/server/: CMakeLists.txt  callback_function.cpp  callback_function.hpp  main.cpp  server.cpp  server.hpp  state.cpp  state.hpp
examples/add_server/share/: define.hpp  packet.hpp
examples/multi_client/: CMakeLists.txt
examples/multi_client/client/: CMakeLists.txt  main.cpp
examples/multi_client/server/: CMakeLists.txt  callback_function.cpp  callback_function.hpp  main.cpp  state.cpp  state.hpp
examples/multi_client/share/: define.hpp  packet.hpp
stdsc/: CMakeLists.txt  README.md  stdsc_basicdata.hpp  stdsc_buffer.cpp  stdsc_buffer.hpp  stdsc_callback_function.cpp  stdsc_callback_function.hpp  stdsc_callback_function_container.cpp  stdsc_callback_function_container.hpp  stdsc_client.cpp  stdsc_client.hpp  stdsc_define.hpp  stdsc_exception.hpp  stdsc_log.cpp  stdsc_log.hpp  stdsc_packet.cpp  stdsc_packet.hpp  stdsc_plaindata.hpp  stdsc_server.cpp  stdsc_server.hpp  stdsc_socket.cpp  stdsc_socket.hpp  stdsc_state.cpp  stdsc_state.hpp  stdsc_thread.cpp  stdsc_thread.hpp  stdsc_utility.cpp  stdsc_utility.hpp
